# coursework

./: .gitignore  README.md  experiments.ipynb  ques.csv
project/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
project/app/: bootstrap.py  main.py
project/domain/entities/: game.py  search.py  user.py
project/domain/repositories/: chunk_repository.py  favorite_repository.py  game_repository.py  user_repository.py
project/infrastructure/clients/: polza.py  telegram_session.py
project/infrastructure/config/: settings.py
project/infrastructure/db/postgres/: base.py  favorite_repository.py  game_repository.py  models.py  user_repository.py
project/infrastructure/db/qdrant/: chunk_repository.py
project/infrastructure/ingestion/: ingestion_service.py  layout_segmenter.py  pdf_extractor.py  recursive_chunker.py
project/infrastructure/rag/: base_rag.py  deep_search.py  fast_search.py  reranker.py  retriever.py
project/presentation/telegram/handlers/: admin.py  favorites.py  menu.py  search.py
project/presentation/telegram/keyboards/: common.py  favorites.py  menu.py  search.py
project/presentation/telegram/states/: admin.py  favorites.py  search.py
project/usecases/: favorites.py  games.py  onboarding.py  search.py
