[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "board-games-telegram-bot"
version = "0.1.0"
description = "Telegram bot with RAG for board game rules"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0,<4.0.0",
    "aiohttp-socks>=0.10.1,<1.0.0",
    "openai>=1.82.0,<2.0.0",
    "httpx[socks]>=0.28.1,<1.0.0",
    "numpy>=2.2.6,<3.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "pypdf>=6.0.0,<7.0.0",
    "scipy>=1.15.3,<2.0.0",
    "SQLAlchemy>=2.0.41,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "qdrant-client>=1.14.2,<2.0.0",
    "chonkie[semantic]>=1.1.1,<2.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
